front-end/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdfunding-frontend-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: crowdfunding-frontend-k8s
          image: supportteam/crowdfunding-frontend-k8s
          ports:
            - containerPort: 3000
